# tiny-clojure

./: .gitignore  CMakeLists.txt  README.md  core.clj  main.cpp
bench/: common-bench-predefs.clj  run-benchmark.bb  visualize.py
bench/test-runs/: arithmetics.clj  compute-linear-exp.clj  fibonacci-27.clj  fibonacci.clj  loop-build-list-200k.clj  loop-build-list.clj  loop-empty-iter.clj  loop-iter-200k.clj
clj/: core.clj  example.clj
src/: core.clj
test/: CMakeLists.txt  bench-predefs.clj  benchmark-forms.clj  forms.clj  run-benchmark.bb  test-repl.bb  test-runtime.cpp  test.bb  test_parser.cpp  test_reader.cpp
test/aot/: example.clj
test/error-files/: arity-ambiguous.clj  bad-arity.clj  bad-binding-form.clj  compile-time-call-nil.clj  def-not-symbol.clj  def-too-many-args.clj  fn-arg-not-symbol.clj  fn-arity-ambiguous.clj  fn-multiple-rest-arity.clj  fn-name-cannot-be-used.clj  fn-no-arglist.clj  fn-no-vararg.clj  if-too-few.clj  if-too-many-args.clj  incorrect-type.clj  let-binding-not-symbol.clj  let-no-binding-list.clj  let-odd-binding-count.clj  loop-binding-not-symbol.clj  loop-binding-symbol-nil.clj  loop-no-binding-list.clj  loop-odd-binding-count.clj  multiple-rest-arity.clj  other-runtime-call-nil.clj  other-wrong-argument-count.clj  recur-argument-count-mismatch.clj  recur-not-in-tail-position.clj  recur-used-outside-loop.clj  unexpected-character.clj  unmatched-parenthesis.clj  var-arg-not-symbol.clj
tinyclj/: MemoryManager.cpp  MemoryManager.h  Runtime.cpp  Runtime.h  tcdef.h  util.cpp  util.h
tinyclj/compiler/: AnalyzerContext.cpp  AnalyzerContext.h  CodegenContext.cpp  CodegenContext.h  CompilerContext.cpp  CompilerContext.h  CompilerUtils.cpp  CompilerUtils.h  ExpressionMode.h  LoopBase.cpp  LoopBase.h  Module.cpp  Module.h  RecursionPoint.cpp  RecursionPoint.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h
tinyclj/compiler/aot/: AotEngine.cpp  AotEngine.h  FileModule.cpp  FileModule.h  FunctionModule.cpp  FunctionModule.h  Module.cpp  Module.h  ModuleLoader.cpp  ModuleLoader.h  ModuleUtil.cpp  ModuleUtil.h
tinyclj/compiler/ast/: ASTUtils.cpp  ASTUtils.h  BodyExpr.cpp  BodyExpr.h  BooleanExpr.cpp  BooleanExpr.h  CapturedBindingExpr.cpp  CapturedBindingExpr.h  CharExpr.cpp  CharExpr.h  ConstantExpr.cpp  ConstantExpr.h  DefExpr.cpp  DefExpr.h  DoubleExpr.cpp  DoubleExpr.h  DynamicInvokeExpr.cpp  DynamicInvokeExpr.h  Expr.h  FunctionExpr.cpp  FunctionExpr.h  FunctionOverload.cpp  FunctionOverload.h  IfExpr.cpp  IfExpr.h  IntegerExpr.cpp  IntegerExpr.h  InvokeExpr.cpp  InvokeExpr.h  LetExpr.cpp  LetExpr.h  LocalBindingExpr.cpp  LocalBindingExpr.h  NilExpr.cpp  NilExpr.h  QuotedExpr.cpp  QuotedExpr.h  RecurExpr.cpp  RecurExpr.h  ScopedLocalBindingExpr.cpp  (+17 more)
tinyclj/compiler/ast/local-binding/: BindingExpr.cpp  BindingExpr.h  CapturedLocalExpr.cpp  CapturedLocalExpr.h  FnArgExpr.cpp  FnArgExpr.h  LocalBindingExpr.cpp  LocalBindingExpr.h  LocalVarExpr.cpp  LocalVarExpr.h
tinyclj/compiler/reader/: LispReader.cpp
tinyclj/reader/: BufferedReader.cpp  BufferedReader.h  LispReader.cpp  LispReader.h
tinyclj/runtime/: GCFrame.cpp  GCFrame.h  MemoryManager.cpp  MemoryManager.h  Runtime.cpp  Runtime.h  RuntimeContext.h  rt.cpp  rt.h
tinyclj/types/: Object.cpp  Object.h  TCBoolean.cpp  TCBoolean.h  TCChar.cpp  TCChar.h  TCClosure.cpp  TCClosure.h  TCDouble.cpp  TCDouble.h  TCFunction.cpp  TCFunction.h  TCInteger.cpp  TCInteger.h  TCList.cpp  TCList.h  TCString.cpp  TCString.h  TCSymbol.cpp  TCSymbol.h  TCVar.cpp  TCVar.h
